Details
-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.10.0
-
3
-
9223372036854775807
Description
With the landing of LU-9034 proper sptlrpc handling ended up broken. It was partially fixed with LU-9086 but the currently the sptlrpc rules are not being updated on the clients. I have collected logs and it appears the import lice cycle has changed. Before LU-9034 landed we observe the
following:
import_select_connection -> sptlrpc_import_sec_adapt -> sptlrpc_sec_create
Now this no longer happens.
Attachments
Issue Links
- is blocking
-
LU-7854 sanity-gss test_1 fails with 'chmod /lustre/scratch failed'
-
- Resolved
-
- is related to
-
LU-10937 Use sysfs to fix up sptlrpc handling so set_param works
-
- Open
-
-
LU-9073 SSK: lgss_sk generates keys with invalid HMAC and Crypto algorithms
-
- Resolved
-
-
LU-9823 LNet fails to come up when using lctl but works with lnetctl
-
- Resolved
-
-
LU-9086 obd_config.c:1258:class_process_config()) no device for:
-
- Resolved
-
-
LU-7183 lctl set_param -P does not work for sptlrpc flavor
-
- Closed
-
- is related to
-
LU-9034 Separate the config logs between different MGCs
-
- Resolved
-